# wgpu_trial

./: Cargo.toml  README  README.md
boids/: Cargo.toml
boids/src/: main.rs
crates/lifegame/: Cargo.toml
crates/lifegame/src/: compute.wgsl  lib.rs  main.rs  shader.wgsl
