[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.92"
version = "0.0.0"

[workspace.dependencies]
wgpu = "27"
nanorand = "0.7"
bytemuck = { version = "1.16", features = [
  "derive",
] }
winit = "0.30.12"
env_logger = "0.11"
log = "0.4"
pollster = "0.3"
cgmath = "0.18.0"
glam = "0.32.0"
encase = "0.12.0"
