[package]
name = "lifegame"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
bytemuck = { workspace = true }
nanorand = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
